force-app/main/default/objects/Limit__c/fields/AlertThreshold__c.field-meta.xml
<CustomField>
    <fullName>AlertThreshold__c</fullName>
    <inlineHelpText>If the limit exceeds the threshold, then trigger alerts</inlineHelpText>
    <label>Alert Threshold</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>