force-app/main/default/objects/Limit__c/fields/ChangeThreshold__c.field-meta.xml
<CustomField>
    <fullName>ChangeThreshold__c</fullName>
    <defaultValue>0.2</defaultValue>
    <inlineHelpText>The threshold for the amount of change from one measurement to the other that should trigger alerts.</inlineHelpText>
    <label>Change Threshold</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>