force-app/main/default/objects/Limit__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <inlineHelpText>If there are any errors while retrieving the limit, they will be recorded here.</inlineHelpText>
    <label>Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>