force-app/main/default/objects/Limit__c/fields/LastPercentOfLimit__c.field-meta.xml
<CustomField>
    <fullName>LastPercentOfLimit__c</fullName>
    <inlineHelpText>The percent of limit when the last snapshot was taken.</inlineHelpText>
    <label>Last Percent of Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>