force-app/main/default/objects/Limit__c/fields/LastRetrieveTime__c.field-meta.xml
<CustomField>
    <fullName>LastRetrieveTime__c</fullName>
    <inlineHelpText>The last Date/Time a snapshot was retrieved</inlineHelpText>
    <label>Last Retrieve Time</label>
    <summarizedField>LimitSnapshot__c.CreatedDate</summarizedField>
    <summaryForeignKey>LimitSnapshot__c.Limit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>