force-app/main/default/objects/Limit__c/fields/LastSnapshotValue__c.field-meta.xml
<CustomField>
    <fullName>LastSnapshotValue__c</fullName>
    <inlineHelpText>The value of the last snapshot taken</inlineHelpText>
    <label>Last Snapshot Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>