force-app/main/default/objects/Limit__c/fields/LimitKey__c.field-meta.xml
<CustomField>
    <fullName>LimitKey__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The API name of the limit that corresponds to the map in the OrgLimits class</inlineHelpText>
    <label>Limit Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>