force-app/main/default/objects/Limit__c/fields/MuteAlerts__c.field-meta.xml
<CustomField>
    <fullName>MuteAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To stop all alerts, check this box.</inlineHelpText>
    <label>Mute Alerts</label>
    <type>Checkbox</type>
</CustomField>