force-app/main/default/objects/Limit__c/fields/NextRetrieveTime__c.field-meta.xml
<CustomField>
    <fullName>NextRetrieveTime__c</fullName>
    <formula>LastRetrieveTime__c + (RetrieveIntervalHours__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The next time the limit will be retrieved</inlineHelpText>
    <label>Next Retrieve Time</label>
    <type>DateTime</type>
</CustomField>