force-app/main/default/objects/Limit__c/fields/RetrieveIntervalHours__c.field-meta.xml
<CustomField>
    <fullName>RetrieveIntervalHours__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>How often to retrieve this limit in hours</inlineHelpText>
    <label>Retrieve Interval (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>