force-app/main/default/objects/Limit__c/fields/SnapshotRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>SnapshotRetentionDays__c</fullName>
    <defaultValue>365</defaultValue>
    <inlineHelpText>The number of days to retain snapshots. Any snapshots older will be deleted. Leave blank to retain all snapshots</inlineHelpText>
    <label>Snapshot Retention (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>