force-app/main/default/objects/Limit__c/fields/TemporaryAlertThreshold__c.field-meta.xml
<CustomField>
    <fullName>TemporaryAlertThreshold__c</fullName>
    <inlineHelpText>If an alert has been triggered and you want to temporarily increase the threshold</inlineHelpText>
    <label>Temporary Alert Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>