force-app/main/default/objects/Limit__c/fields/TemporaryAlertThresholdExpiration__c.field-meta.xml
<CustomField>
    <fullName>TemporaryAlertThresholdExpiration__c</fullName>
    <inlineHelpText>When to remove the temporary alert threshold. The Temporary Alert Threshold field will be cleared at this time.</inlineHelpText>
    <label>Temporary Alert Threshold Expiration</label>
    <type>DateTime</type>
</CustomField>