force-app/main/default/objects/Limit__c/validationRules/LMT001_TemporaryThresholdReqExpiration.validationRule-meta.xml
<ValidationRule>
    <fullName>LMT001_TemporaryThresholdReqExpiration</fullName>
    <active>true</active>
    <description>When a temporary threshold is entered, an expiration date time is needed</description>
    <errorConditionFormula>NOT(ISBLANK(TemporaryAlertThreshold__c)) &amp;&amp; ISBLANK( TemporaryAlertThresholdExpiration__c)</errorConditionFormula>
    <errorDisplayField>TemporaryAlertThresholdExpiration__c</errorDisplayField>
    <errorMessage>When a Temporary Alert Threshold is entered, the Temporary Alert Threshold Expiration is needed. [LMT-001]</errorMessage>
</ValidationRule>