force-app/main/default/objects/Limit__c/validationRules/LMT002_TemporaryThresholdReqExpiration.validationRule-meta.xml
<ValidationRule>
    <fullName>LMT002_TemporaryThresholdReqExpiration</fullName>
    <active>true</active>
    <description>When a an expiration date time is entered, temporary threshold is needed</description>
    <errorConditionFormula>ISBLANK(TemporaryAlertThreshold__c) &amp;&amp; NOT(ISBLANK( TemporaryAlertThresholdExpiration__c))</errorConditionFormula>
    <errorDisplayField>TemporaryAlertThreshold__c</errorDisplayField>
    <errorMessage>When a Temporary Alert Threshold Expiration is entered, the Temporary Alert Threshold is needed. [LMT-002]</errorMessage>
</ValidationRule>