force-app/main/default/objects/Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AlertThreshold__c</columns>
    <columns>ChangeThreshold__c</columns>
    <columns>LastPercentOfLimit__c</columns>
    <columns>LastRetrieveTime__c</columns>
    <columns>NextRetrieveTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>