force-app/main/default/objects/Limit__c/listViews/Limit_Notification_Queue_Limit.listView-meta.xml
<ListView>
    <fullName>Limit_Notification_Queue_Limit</fullName>
    <filterScope>Queue</filterScope>
    <label>Limit Notification Queue</label>
    <queue>Limit_Notification_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>